[metadata]
name = mistral_lint
author = Dougal Matthews
author-email = dougal@redhat.com
summary = Linter for Mistral Workflows
description-file = README.rst
home-page = https://github.com/d0ugal/mistral-lint
license = Apache License, Version 2.0
classifier =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Topic :: Software Development
    Topic :: Utilities

[files]
packages =
    mistral_lint

[entry_points]
console_scripts =
    mistral_lint = mistral_lint.__main__:main

mistral.linters =
    description = mistral_lint.linters:description
    type = mistral_lint.linters:type_
    inputs = mistral_lint.linters:inputs
    tasks = mistral_lint.linters:tasks
    expressions = mistral_lint.linters:expressions

[wheel]
universal = 1
